# Meerge-Africa-saas

./: .env  .gitignore  .ruff.toml  Dockerfile  Makefile  aws.tf  base.json  gunicorn.conf.py  hello.py  index.html  mail.py  main.tf  manage.py  openapi-schema.yml  package-lock.json  package.json  passenger_wsgi.py  pyproject.toml  requirements.txt  schema.yml  tailwind.config.js
.github/workflows/: build.yml  cpanel.yml  (+3 more)
banking/: admin.py  models.py  ninja_api.py  schema.py
client/: Dockerfile  package-lock.json  package.json  tailwind.config.js
config/: api.py  env.py  environ.py  form_fields.py  local.py  plunk.py  urls.py  wsgi.py
core/: admin.py  api.py  forms.py  htmx.py  models.py  serializers.py  urls.py  views.py
css/: featuresCard.css  footer.css  heroSection.css  lastSection.css  productCard.css
customers/: admin.py  api.py  forms.py  htmx.py  models.py  serializers.py  signal.py  urls.py
geo/: models.py
home/: urls.py  views.py
html/: business_info.html  field-errors.html  field-label.html  phone-field.html
iac/: aws.tf  locals.tf  main.tf
inventory/: admin.py  api.py  api_views.py  forms.py  htmx.py  inventory_view_api.py  models.py  serializers.py  urls.py  views.py
meerge-LP/: Dockerfile  db.sqlite3  manage.py
merge_LP/: Dockerfile  db.sqlite3  manage.py
orders/: admin.py  api.py  forms.py  htmx.py  models.py  serializers.py  signals.py  urls.py  views.py
restaurants/: admin.py  api.py  forms.py  htmx.py  models.py  onboarding.py  pages.py  registration.py  serializers.py  signals.py  urls.py  views.py
scripts/: activate
(+276 files in other folders)
